[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "work on program will exit"
edition = "2018"
license-file = "LICENSE"
name = "will_exit"
readme = "./README.md"
repository = "https://github.com/rise0chen/will_exit.git"
version = "0.2.0"

[features]
async = ["event-listener"]
default = []

[dependencies]
event-listener = {version = "2", optional = true}
libc = "0.2"
signal-hook-registry = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
